--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <title> Ash's CC Portfolio </title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body style="background-image: url('img_girl.jpg');">
         <div class="topnav">
