--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <title> Ash's CC Portfolio </title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="sparkle.css">
     </head>
     <body style="background-image: url('img_girl.jpg');">
         <div class="topnav">
@@ -14,7 +14,7 @@
             <h1>
                 Ash's CC Portolio
             </h1> -->
-        </header>
+        <!-- </header> -->
         <!-- <ul>
             <li><a href="projectpages/project1.html">Project 1 : Lost & Found</a></li>
             <br>
