--- a/projectpages/project6.html
+++ b/projectpages/project6.html
@@ -5,6 +5,7 @@
     <title>sleep is for the week</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/sparkle.css">
 </head>
 <body class="projectpage">
     <div class="viewproject">
