--- a/projectpages/project3.html
+++ b/projectpages/project3.html
@@ -15,7 +15,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/Clock/sketch.js"></script>
+                <script src="/projectpages/Clock/sketch.js"></script>
             </div>
             <div class="description">
                 When you hover over each planet - <br>
