--- a/projectpages/project6.html
+++ b/projectpages/project6.html
@@ -15,7 +15,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/sleep is for the week/sketch.js"></script>
+                <script src="/projectpages/sleep is for the week/sketch.js"></script>
             </div>
             <div class="description">
                 Blue square : passed out on counch <br>
