--- a/projectpages/project7.html
+++ b/projectpages/project7.html
@@ -15,7 +15,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/Date night/sketch.js"></script>
+                <script src="/projectpages/Date night/sketch.js"></script>
             </div>
             <div class="description">
                 When the cute new guy at work gives you a chance of calling him over to your house for a nice little meal, you jump on the opportunity. Only problem is you don't know how to cook and may have lied about it.. not an issue since all you have to do to impress him is follow a simple recipe book, cooking can't be that hard... right?
