--- a/projectpages/project4.html
+++ b/projectpages/project4.html
@@ -15,7 +15,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/princess/sketch.js"></script>
+                <script src="/projectpages/princess/sketch.js"></script>
             </div>
             <div class="description">
                 Kaolita is a intergalactic warrior princess who is part alien, part human. She is invincible until she takes off her necklace which is her primary source of power. 
