--- a/projectpages/project5.html
+++ b/projectpages/project5.html
@@ -15,7 +15,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/bake with me/sketch.js"></script>
+                <script src="/projectpages/bake with me/sketch.js"></script>
             </div>
             <div class="description">
                 Bake these cinnamon roll shapes by moving your cursor left to right. Concentrate on the rolls for a minute before clicking on them to stop the rotation. They might play a trick on you and look like they are still moving!
