--- a/projectpages/project2.html
+++ b/projectpages/project2.html
@@ -15,7 +15,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/projectpages/shy guy/sketch1.js"></script>
+                <script src="projectpages/shy guy/sketch.js"></script>
             </div>
             <div class="description">
                 I wanted to show an emotion incited by the user's cursor to make the interaction more playful and hands-on. 
