--- a/lost and found/project1.html
+++ b/lost and found/project1.html
@@ -5,7 +5,7 @@
     <title>Lost and Found</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/sparkle.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body class="projectpage">
     <div class="viewproject">
