--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
           <div class="project-container">
             <!-- <div class="project" style="background-image: url('./assets/download-2.png');"></div> -->
-          <div class="project" onclick="location.href='lost and found/project1.html';"> <img src="./assets/download-2.png" width="100%" height="80%">   lost and found </div>
+          <div class="project" onclick="location.href='projectpages/project1.html';"> <img src="./assets/download-2.png" width="100%" height="80%">   lost and found </div>
           <div class="project" onclick="location.href='projectpages/project2.html';"> <img src="./assets/download-5.png" width="100%" height="80%">   shy guy </div>
           <div class="project" onclick="location.href='projectpages/project5.html';"> <img src="./assets/download-3.png" width="100%" height="80%">   bake with me </div>
           <div class="project" onclick="location.href='projectpages/project7.html';"> <img src="./assets/download-6.png" width="100%" height="80%">   date night </div>
