--- a/projectpages/project2.html
+++ b/projectpages/project2.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="sparkle.css">
     <title>shy guy</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
@@ -15,7 +14,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/projectpages/shy guy/sketch.js"></script>
+                <script src="/projectpages/shyguy/sketch.js"></script>
             </div>
             <div class="description">
                 I wanted to show an emotion incited by the user's cursor to make the interaction more playful and hands-on. 
