--- a/projectpages/project4.html
+++ b/projectpages/project4.html
@@ -4,7 +4,7 @@
     <title>Exquisite Corpse</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/sparkle.css">
+    <link rel="stylesheet" type="text/css" href="../sparkle.css">
 </head>
 <body class="projectpage">
     <div class="viewproject">
