--- a/projectpages/project1.html
+++ b/projectpages/project1.html
@@ -14,7 +14,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/projectpages/lost and found/sketch.js"></script>
+                <script src="../projectpages/lost and found/sketch.js"></script>
             </div>
             <div class="description">
                 I started with coding the background to show a school bus since Jovana got Mr. Chimp Chimp on a school trip and very quickly realized this wasn't as easy as I thought it was going to be. My first element (the seat) was meant to be curved and look more soft but working with curved elements is pretty difficult. I'm glad I figured out how to make at least one part of the seat curved. 
