--- a/projectpages/project2.html
+++ b/projectpages/project2.html
@@ -22,5 +22,5 @@
                        <br> <br> I also wanted to try some other variable functions besides size and decided to add little blush circles that would deepen as the face got more expressive. 
                         To further add some randomness I added text that would change once you click on the face so it seems like it's shouting at you with changing bg colours and text sizes.        </div>
     </div>
-    <a href="/index.html" class="circle-button">←</a>
+    <a href="../index.html" class="circle-button">←</a>
 </html>
