--- a/projectpages/project3.html
+++ b/projectpages/project3.html
@@ -25,6 +25,6 @@
                 <br><br>
                 
                 'People like us who believe in physics know that the distinction between past, present, and future is only a stubbornly persistent illusion' - Albert Einstein    </div>
-    <a href="/index.html" class="circle-button">←</a>
+    <a href="../index.html" class="circle-button">←</a>
 </body>
 </html>
