--- a/projectpages/project4.html
+++ b/projectpages/project4.html
@@ -22,6 +22,6 @@
                 My motivation for this assignment was to have fun, if you click on the sketch, you can play the role of her enemy and shoot lazers at her (which will do nothing since she is the most powerful being in the galaxy). Her pink bubblegum also grows on clicking the mouse. 
                 <br> <br>
                 I tried to build a cohesive style to illustrate each part of the sketch in. Building my own functions was interesting way to sketch, I plotted each coordinates relative to the base ones (x and y) and could change the position of the whole section in the draw function. Although defining new functions wasn't really necessary in this specific sketch, I think creating functions can be really useful in other sketches, I like how it's almost a way of creating groups.     </div>
-                <a href="/index.html" class="circle-button">←</a>
+                <a href="../index.html" class="circle-button">←</a>
             </body>
 </html>
