--- a/projectpages/project5.html
+++ b/projectpages/project5.html
@@ -20,6 +20,6 @@
                 Bake these cinnamon roll shapes by moving your cursor left to right. Concentrate on the rolls for a minute before clicking on them to stop the rotation. They might play a trick on you and look like they are still moving!
                 <br> <br>
                 I followed a nonlinear process going into this project by playing with the for loops and seeing what kind of shapes i could use to build an illusion. Having experimented with 3D shapes in my previous assignment, I wanted to try building on what I already know and incorporate loops in this shape. I initially had a cube which had a variable depth with respect to the mouse position but felt like it wasn't very illusion like. The torus shape with the 3d colours looked much more fun. Once I was satisfied with my shape, I messed with the rotation and radius till it felt visually confusing enough.    <!-- Your p5.js sketch -->
-                <a href="/index.html" class="circle-button">←</a>
+                <a href="../index.html" class="circle-button">←</a>
             </body>
 </html>
