--- a/projectpages/project6.html
+++ b/projectpages/project6.html
@@ -26,6 +26,6 @@
                 - Top to bottom, double white lines indicate days of the week, there are 7
                 <br><br>
                 For example : on monday, (double white line no. 1) I passed out on my couch at 10, woke up around 12 and tried to work, failed and went back to bed at 1.    
-                <a href="/index.html" class="circle-button">←</a>
+                <a href="../index.html" class="circle-button">←</a>
             </body>
 </html>
