--- a/projectpages/project7.html
+++ b/projectpages/project7.html
@@ -24,6 +24,6 @@
                 How to play : 
                 
                 Click on start to begin, once you reach the recipe scene, take your time and memorize the instructions that are highlighted, you MUST remember the order of the ingredients and the time to cook them for. If all goes well, you may enjoy your successful date (you sneaky liar), if you fail.... your date might not end so well. 
-                <a href="/index.html" class="circle-button">←</a>
+                <a href="../index.html" class="circle-button">←</a>
  </body>
 </html>
