--- a/projectpages/project5.html
+++ b/projectpages/project5.html
@@ -14,7 +14,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/projectpages/bake with me/sketch.js"></script>
+                <script src="/coding-fun/projectpages/bake with me/sketch.js"></script>
             </div>
             <div class="description">
                 Bake these cinnamon roll shapes by moving your cursor left to right. Concentrate on the rolls for a minute before clicking on them to stop the rotation. They might play a trick on you and look like they are still moving!
