--- a/projectpages/project6.html
+++ b/projectpages/project6.html
@@ -14,7 +14,7 @@
             </div>
             <div class="sketch-container">
                 <main></main>
-                <script src="/projectpages/sleep is for the week/sketch.js"></script>
+                <script src="/coding-fun/projectpages/sleep is for the week/sketch.js"></script>
             </div>
             <div class="description">
                 Blue square : passed out on counch <br>
